# AoC

./: .gitignore
aoc-2023-rs/: Cargo.toml
aoc-2023-rs/day01/src/: part1.rs  part2.rs
aoc-2023-rs/day02/: Cargo.toml
aoc-2023-rs/day02/src/: part1.rs  part2.rs
aoc-2023-rs/day03/: Cargo.toml
aoc-2023-rs/day03/src/: part1.rs  part2.rs
aoc-2023-rs/template/: test.txt
aoc-2023-rs/template/src/: part2.rs
aoc-2024-cpp/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
aoc-2024-cpp/day01/: day01.cpp
aoc-2024-cpp/day02/: day02.cpp
aoc-2024-cpp/day03/: day03.cpp
aoc-2024-cpp/day04/: day04.cpp
aoc-2024-cpp/day05/: day05.cpp
aoc-2024-cpp/day06/: day06.cpp
aoc-2024-cpp/day09/: day09.cpp
aoc-2024-cpp/day1/: day1.cpp
aoc-2024-cpp/day10/: day10.cpp
aoc-2024-cpp/day11/: day11.cpp
aoc-2024-cpp/day12/: day12.cpp
aoc-2024-cpp/day17/: day17.cpp  rev-eng.txt
aoc-2024-cpp/day2/: day2.cpp
aoc-2024-cpp/day22/: day22.cpp
aoc-2024-cpp/day25/: day25.cpp
aoc-2024-cpp/day3/: day3.cpp
aoc-2024-py/: pyproject.toml
aoc-2024-py/day04/: day04.py
aoc-2024-py/day06/: day06.py
aoc-2024-py/day08/: day08.py
aoc-2024-py/day13/: day13.py
aoc-2024-py/day14/: day14.py
aoc-2024-py/day15/: day15.py
aoc-2024-py/day16/: day16.py
aoc-2024-py/day20/: day20.py
aoc-2024-py/day22/: day22.py
aoc-2024-py/day23/: day23.py
aoc-2024-py/day25/: day25.py
aoc-2024-rs/: Cargo.toml
aoc-2025-rs/: Cargo.toml
aoc-2025-rs/day01/: Cargo.toml
aoc-2025-rs/day01/src/: part1.rs  part2.rs
aoc-2025-rs/day02/: Cargo.toml
aoc-2025-rs/day02/src/: part1.rs  part2.rs
aoc-2025-rs/day03/src/: part1.rs  part2.rs
aoc-2025-rs/day04/: Cargo.toml
aoc-2025-rs/day05/: Cargo.toml
aoc-2025-rs/day06/: Cargo.toml
aoc-2025-rs/day07/: Cargo.toml
aoc-2025-rs/day08/: Cargo.toml
aoc-2025-rs/day09/: Cargo.toml
aoc-2025-rs/day10/: Cargo.toml
aoc-2025-rs/day11/: Cargo.toml
aoc-2025-rs/day12/: Cargo.toml
aoc-2025-rs/template/: Cargo.toml  input.txt
(+18 files in other folders)
